Wstępny commit przed pull --rebase

--- a/zmeczenieprojekt.ipynb
+++ b/zmeczenieprojekt.ipynb
@@ -97,31 +97,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ce2fb109-9f94-43f5-a469-50807ad373ed",
-   "metadata": {},
+   "execution_count": 19,
+   "id": "460a34f3-6550-411b-b646-2634fa71995e",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "git version 2.39.1.windows.1\n"
+      "warning: in the working copy of 'zmeczenieprojekt.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     }
    ],
    "source": [
-    "!git --version"
+    "!git add .\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d99737-be1b-4e4b-9cf6-31c33384b5a6",
+   "id": "13f63afa-5076-48f6-9235-91cff0c3b733",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!git config --global user.email \"dominik228820@gmail.co\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
