--- a/zmeczenieprojekt.ipynb
+++ b/zmeczenieprojekt.ipynb
@@ -9,90 +9,88 @@
    },
    "outputs": [],
    "source": [
-    "# Importowanie wymaganych bibliotek\n",
-    "import cv2  # OpenCV - biblioteka do przetwarzania obrazu\n",
-    "import dlib  # Biblioteka do detekcji twarzy i analizy punktów charakterystycznych\n",
-    "import numpy as np  # Obsługa operacji na macierzach\n",
-    "import imutils  # Pomocnicze operacje na obrazach (np. zmiana rozmiaru)\n",
-    "import tensorflow as tf  # Biblioteka do uczenia maszynowego (nie jest używana w kodzie)\n",
-    "from tensorflow.keras.models import load_model  # Ładowanie modeli sieci neuronowych (ale nie jest używane)\n",
-    "import matplotlib.pyplot as plt  # Biblioteka do wizualizacji\n",
-    "from scipy.spatial import distance as dist  # Obliczanie odległości euklidesowej\n",
     "\n",
-    "# Inicjalizacja detektora twarzy\n",
-    "detector = dlib.get_frontal_face_detector()\n",
+    "import cv2 as cv \n",
+    "import dlib  \n",
+    "import numpy as np  \n",
+    "import tensorflow as tf \n",
+    "import matplotlib.pyplot as plt  \n",
+    "from scipy.spatial import distance as dist \n",
+    "#----------------------------------------------ZMIENNE---------------------------------\n",
+    "EYE_AR_THRESH = 0.25  #Próg zamknięcia oczu \n",
+    "EYE_AR_CONSEC_FRAMES = 20  #Liczba klatek (próg senności) \n",
+    "blink_counter = 0 #Licznik mrugnięć \n",
+    "drowsy_alert = False #Flaga ostrzeżenia\n",
+    "prog_ziewania = 0.7\n",
     "\n",
-    "# Wczytanie modelu predykcji punktów charakterystycznych twarzy (oczy, usta, nos)\n",
-    "predictor = dlib.shape_predictor(\"C:\\\\Users\\\\Administrator\\\\projektzmeczenie\\\\shape_predictor_68_face_landmarks.dat\")\n",
-    "\n",
-    "# Inicjalizacja kamery (0 oznacza domyślną kamerę)\n",
-    "cap = cv2.VideoCapture(0)\n",
-    "\n",
-    "# Funkcja obliczająca Eye Aspect Ratio (EAR) - wskaźnik zamknięcia oczu\n",
+    "#-------------------------------------------FUNKCJE-------------------------------------\n",
+    "#Funkcja obliczająca Eye Aspect Ratio\n",
     "def eye_aspect_ratio(eye):\n",
-    "    A = dist.euclidean(eye[1], eye[5])  # Odległość między górną i dolną powieką (wewnętrzna część oka)\n",
-    "    B = dist.euclidean(eye[2], eye[4])  # Odległość między górną i dolną powieką (zewnętrzna część oka)\n",
-    "    C = dist.euclidean(eye[0], eye[3])  # Odległość między kącikami oka\n",
-    "    return (A + B) / (2.0 * C)  # Wskaźnik EAR - im niższy, tym bardziej zamknięte oczy\n",
+    "    A = dist.euclidean(eye[1], eye[5])  #Odległość między górną i dolną powieką (wewnętrzna część oka)\n",
+    "    B = dist.euclidean(eye[2], eye[4])  #Odległość między górną i dolną powieką (zewnętrzna część oka)\n",
+    "    C = dist.euclidean(eye[0], eye[3])  #Odległość między kącikami oka\n",
+    "    return (A + B) / (2.0 * C)  #Wskaźnik EAR - im niższy, tym bardziej zamknięte oczy\n",
     "\n",
-    "# Parametry dla detekcji zmęczenia\n",
-    "EYE_AR_THRESH = 0.25  # Próg zamknięcia oczu - jeśli EAR jest niższe, oczy są zamknięte\n",
-    "EYE_AR_CONSEC_FRAMES = 20  # Liczba klatek, po których uznamy senność kierowcy\n",
+    "def mouth_aspect_ratio(mouth):\n",
+    "    A = dist.euclidean(mouth[2], mouth[10])\n",
+    "    B = dist.euclidean(mouth[4], mouth[8])\n",
+    "    C = dist.euclidean(mouth[0], mouth[6])   \n",
+    "    return (A + B) / (2.0 * C)             \n",
     "\n",
-    "# Licznik mrugnięć i flaga ostrzeżenia\n",
-    "blink_counter = 0\n",
-    "drowsy_alert = False  # Flaga wykrycia senności\n",
+    "#--------------------------------------------------------------------------------------\n",
     "\n",
+    "#Inicjalizacja detektora twarzy, modelu predykcji, kamery\n",
+    "detector = dlib.get_frontal_face_detector() \n",
+    "predictor = dlib.shape_predictor(\"shape_predictor_68_face_landmarks.dat\")\n",
+    "cap = cv.VideoCapture(0) \n",
+    "\n",
+    "#Pobranie klatki obrazu z kamery\n",
     "while True:\n",
-    "    # Pobranie klatki obrazu z kamery\n",
     "    ret, frame = cap.read()\n",
-    "    if not ret:  # Jeśli nie udało się pobrać klatki, przerwij pętlę\n",
+    "    if not ret:  \n",
     "        break\n",
     "\n",
-    "    # Konwersja obrazu na skalę szarości (lepsza detekcja)\n",
-    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "    # Wykrywanie twarzy w obrazie\n",
+    "    #Wykrywanie twarzy\n",
+    "    gray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
     "    faces = detector(gray)\n",
-    "\n",
+    "                         \n",
     "    for face in faces:\n",
-    "        # Pobranie punktów charakterystycznych twarzy (oczy, nos, usta)\n",
+    "        #Pobranie punktów charakterystycznych twarzy (oczy, nos, usta)\n",
     "        landmarks = predictor(gray, face)\n",
-    "\n",
-    "        # Pobranie współrzędnych punktów dla lewego oka (indeksy 36-41)\n",
     "        left_eye = np.array([(landmarks.part(i).x, landmarks.part(i).y) for i in range(36, 42)])\n",
-    "\n",
-    "        # Pobranie współrzędnych punktów dla prawego oka (indeksy 42-47)\n",
     "        right_eye = np.array([(landmarks.part(i).x, landmarks.part(i).y) for i in range(42, 48)])\n",
+    "        mouth = np.array([(landmarks.part(i).x, landmarks.part(i).y) for i in range(48, 68)])\n",
+    "        cv.rectangle(frame, (face.left(), face.top()), (face.right(), face.bottom()), (0, 0, 255), 2)\n",
     "\n",
-    "        # Obliczenie wskaźnika EAR dla obu oczu\n",
+    "        #Obliczenie wskaźnika EAR dla obu oczu, MAR dla ust\n",
     "        left_EAR = eye_aspect_ratio(left_eye)\n",
     "        right_EAR = eye_aspect_ratio(right_eye)\n",
     "        EAR = (left_EAR + right_EAR) / 2.0  # Średnia wartość EAR dla obu oczu\n",
-    "\n",
-    "        # Sprawdzenie, czy oczy są zamknięte (EAR poniżej progu)\n",
-    "        if EAR < EYE_AR_THRESH:\n",
-    "            blink_counter += 1  # Zwiększenie licznika zamkniętych oczu\n",
+    "        MAR = mouth_aspect_ratio(mouth)\n",
+    "        \n",
+    "        if EAR <= EYE_AR_THRESH:\n",
+    "            blink_counter += 1 \n",
     "        else:\n",
-    "            # Jeśli oczy były zamknięte przez określoną liczbę klatek, uznajemy senność\n",
     "            if blink_counter >= EYE_AR_CONSEC_FRAMES:\n",
     "                drowsy_alert = True\n",
-    "            blink_counter = 0  # Zerowanie licznika mrugnięć\n",
+    "            blink_counter = 0  \n",
     "\n",
-    "    # Wyświetlenie statusu senności na ekranie\n",
-    "    cv2.putText(frame, f\"Sleepy: {drowsy_alert}\", (10, 30),\n",
-    "                cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
+    "        if MAR>=prog_ziewania:\n",
+    "            drowsy_alert = True\n",
+    "        else: \n",
+    "            drowsy_alert = False\n",
     "\n",
-    "    # Wyświetlenie obrazu z kamery\n",
-    "    cv2.imshow(\"Kamera\", frame)\n",
+    "    #Status senności\n",
+    "    cv.putText(frame, f\"Sleepy: {drowsy_alert}\", (10, 30),\n",
+    "    cv.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
     "\n",
-    "    # Przerwanie działania programu po naciśnięciu 'q'\n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "\n",
+    "    cv.imshow(\"Kamera\", frame)\n",
+    "    if cv.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
     "\n",
-    "# Zwolnienie kamery i zamknięcie okien\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()\n"
+    "cv.destroyAllWindows()\n"
    ]
   },
   {
@@ -126,9 +124,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (opencv)",
+   "display_name": "opencv",
    "language": "python",
-   "name": "opencv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -140,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
