--- a/zmeczenieprojekt.ipynb
+++ b/zmeczenieprojekt.ipynb
@@ -2,120 +2,137 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "6410994f-55b5-4ba6-bc91-464f5fb92236",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analiza zakończona. Wyniki zapisane do results.csv\n",
+      "Analiza zakończona. Wyniki zapisane do results.csv\n",
+      "Nie wybrano pliku.\n"
+     ]
+    }
+   ],
    "source": [
+    "import cv2  # OpenCV - biblioteka do przetwarzania obrazu\n",
+    "import dlib  # Biblioteka do detekcji twarzy i analizy punktów charakterystycznych\n",
+    "import numpy as np  # Obsługa operacji na macierzach\n",
+    "import imutils  # Pomocnicze operacje na obrazach (np. zmiana rozmiaru)\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, simpledialog\n",
+    "import matplotlib.pyplot as plt  # Biblioteka do wizualizacji\n",
+    "from scipy.spatial import distance as dist  # Obliczanie odległości euklidesowej\n",
     "\n",
-    "import cv2 as cv \n",
-    "import dlib  \n",
-    "import numpy as np  \n",
-    "import tensorflow as tf \n",
-    "import matplotlib.pyplot as plt  \n",
-    "from scipy.spatial import distance as dist \n",
-    "import face_recognition as fr\n",
-    "#----------------------------------------------ZMIENNE---------------------------------\n",
-    "EYE_AR_THRESH, EYE_AR_CONSEC_FRAMES, OPEN_EYES_CONSEC_FRAMES = 0.25, 20, 20  #Próg zamknięcia oczu, liczba klatek przy zamkniętych, liczba klatek przy otwwartych\n",
-    "yawn_treshhold = 0.7\n",
-    "blink_counter, open_counter, count_yawn = 0, 0, 0 #flagi\n",
-    "drowsy_alert = False #Flaga ostrzeżenia\n",
+    "def eye_aspect_ratio(eye):\n",
+    "    A = dist.euclidean(eye[1], eye[5])\n",
+    "    B = dist.euclidean(eye[2], eye[4])\n",
+    "    C = dist.euclidean(eye[0], eye[3])\n",
+    "    return (A + B) / (2.0 * C)\n",
     "\n",
-    "#-------------------------------------------FUNKCJE-------------------------------------\n",
-    "#Funkcja obliczająca Eye Aspect Ratio\n",
-    "ear = lambda eye: (dist.euclidean(eye[1], eye[5]) + dist.euclidean(eye[2], eye[4])) / (2.0 * dist.euclidean(eye[0], eye[3]))\n",
-    "mar = lambda mouth: (dist.euclidean(mouth[2], mouth[10]) + dist.euclidean(mouth[4], mouth[8])) / (2.0 * dist.euclidean(mouth[0], mouth[6]))\n",
+    "EYE_AR_THRESH = 0.25\n",
+    "EYE_AR_CONSEC_FRAMES = 20\n",
+    "blink_counter = 0\n",
+    "drowsy_alert = False\n",
+    "FRAME_WIDTH = 640\n",
+    "FRAME_HEIGHT = 480\n",
+    "frame_skip = 5\n",
+    "frames_folder = \"frames\"\n",
+    "os.makedirs(frames_folder, exist_ok=True)\n",
     "\n",
-    "# def eye_aspect_ratio(eye):\n",
-    "#     A = dist.euclidean(eye[1], eye[5])  #Odległość między górną i dolną powieką (wewnętrzna część oka)\n",
-    "#     B = dist.euclidean(eye[2], eye[4])  #Odległość między górną i dolną powieką (zewnętrzna część oka)\n",
-    "#     C = dist.euclidean(eye[0], eye[3])  #Odległość między kącikami oka\n",
-    "#     return (A + B) / (2.0 * C)  #Wskaźnik EAR - im niższy, tym bardziej zamknięte oczy\n",
+    "def start_analysis(source):\n",
+    "    global blink_counter, drowsy_alert  \n",
+    "    blink_counter = 0  \n",
+    "    drowsy_alert = False  \n",
     "\n",
-    "# def mouth_aspect_ratio(mouth):\n",
-    "#     A = dist.euclidean(mouth[2], mouth[10])\n",
-    "#     B = dist.euclidean(mouth[4], mouth[8])\n",
-    "#     C = dist.euclidean(mouth[0], mouth[6])   \n",
-    "#     return (A + B) / (2.0 * C)             \n",
-    "\n",
-    "#--------------------------------------------------------------------------------------\n",
-    "\n",
-    "#Inicjalizacja detektora twarzy, modelu predykcji, kamery\n",
-    "detector = dlib.get_frontal_face_detector() \n",
-    "#detector = dlib.cnn_face_detection_model_v1(\"mmod_human_face_detector.dat\") #CNN strasznie się zwiesza\n",
-    "predictor = dlib.shape_predictor(\"shape_predictor_68_face_landmarks.dat\")\n",
-    "cap = cv.VideoCapture(0) \n",
-    "\n",
-    "#Pobranie klatki obrazu z kamery\n",
-    "while True:\n",
-    "    ret, frame = cap.read()\n",
-    "    if not ret:  \n",
-    "        break\n",
-    "\n",
-    "    #Wykrywanie twarzy\n",
-    "    gray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
-    "    faces = detector(gray)\n",
-    "\n",
-    "    for face in faces:\n",
-    "    #for face in detector(gray): #cnn\n",
-    "        #Pobranie punktów charakterystycznych twarzy (oczy, nos, usta)\n",
-    "        #rect = face.rect #cnn\n",
-    "\n",
-    "        landmarks = predictor(gray, face)\n",
-    "        left_eye = np.array([(landmarks.part(i).x, landmarks.part(i).y) for i in range(36, 42)])\n",
-    "        right_eye = np.array([(landmarks.part(i).x, landmarks.part(i).y) for i in range(42, 48)])\n",
-    "        mouth_pts = np.array([(landmarks.part(i).x, landmarks.part(i).y) for i in range(48, 68)])\n",
-    "        cv.rectangle(frame, (face.left(), face.top()), (face.right(), face.bottom()), (0, 0, 255), 2)\n",
-    "\n",
-    "        #Obliczenie wskaźnika EAR dla obu oczu, MAR dla ust\n",
-    "        EAR = (ear(left_eye) + ear(right_eye)) / 2.0  \n",
-    "        MAR = mar(mouth_pts)\n",
-    "        # left_EAR = ear(left_eye)\n",
-    "        # right_EAR = ear(right_eye)\n",
-    "        # EAR = (left_EAR + right_EAR) / 2.0  # Średnia wartość EAR dla obu oczu\n",
-    "        \n",
-    "\n",
-    "        if EAR<=EYE_AR_THRESH:\n",
-    "            blink_counter+=1\n",
-    "            open_counter=0\n",
+    "    if source == \"Kamera\":\n",
+    "        cap = cv2.VideoCapture(0)\n",
+    "    elif source == \"Wideo\":  # Poprawione! elif przed else\n",
+    "        video_path = filedialog.askopenfilename(title=\"Wybierz plik wideo\", filetypes=[(\"Pliki MOV\", \"*.MOV\")])\n",
+    "        if video_path:  # Sprawdzenie, czy użytkownik wybrał plik\n",
+    "            cap = cv2.VideoCapture(video_path)\n",
     "        else:\n",
-    "            blink_counter=0\n",
-    "            open_counter+=1\n",
+    "            print(\"Nie wybrano pliku.\")\n",
+    "            return\n",
+    "    else:\n",
+    "        print(\"Niepoprawny wybór.\")\n",
+    "        return\n",
+    "    \n",
+    "    detector = dlib.get_frontal_face_detector()\n",
+    "    predictor = dlib.shape_predictor(\"C:\\\\Users\\\\Administrator\\\\projektzmeczenie\\\\shape_predictor_68_face_landmarks.dat\")\n",
+    "    \n",
+    "    results = []\n",
+    "    frame_count = 0\n",
+    "    \n",
+    "    while cap.isOpened():\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        \n",
+    "        if frame_count % frame_skip == 0:\n",
+    "            frame_path = os.path.join(frames_folder, f\"frame_{frame_count}.jpg\")\n",
+    "            cv2.imwrite(frame_path, frame)\n",
+    "            gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "            faces = detector(gray)\n",
+    "            EAR = 0\n",
     "\n",
-    "        #Ustawienie alertów\n",
-    "        ear_alert = blink_counter>=EYE_AR_CONSEC_FRAMES\n",
-    "        mar_alert = MAR >= yawn_treshhold\n",
-    "        drowsy_alert = ear_alert or mar_alert\n",
+    "            for face in faces:\n",
+    "                landmarks = predictor(gray, face)\n",
+    "                left_eye = np.array([(landmarks.part(i).x, landmarks.part(i).y) for i in range(36, 42)])\n",
+    "                right_eye = np.array([(landmarks.part(i).x, landmarks.part(i).y) for i in range(42, 48)])\n",
+    "                left_EAR = eye_aspect_ratio(left_eye)\n",
+    "                right_EAR = eye_aspect_ratio(right_eye)\n",
+    "                EAR = (left_EAR + right_EAR) / 2.0\n",
+    "                \n",
+    "                if EAR < EYE_AR_THRESH:\n",
+    "                    blink_counter += 1\n",
+    "                else:\n",
+    "                    if blink_counter >= EYE_AR_CONSEC_FRAMES:\n",
+    "                        drowsy_alert = True\n",
+    "                    blink_counter = 0\n",
+    "            \n",
+    "            results.append([frame_count, frame_path, EAR, drowsy_alert])\n",
+    "            frame_resized = cv2.resize(frame, (FRAME_WIDTH, FRAME_HEIGHT))\n",
+    "            cv2.putText(frame_resized, f\"Sleepy: {drowsy_alert}\", (10, 30),\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
+    "            cv2.imshow(\"Analiza Zmęczenia\", frame_resized)\n",
+    "            \n",
+    "            if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "                break\n",
+    "        \n",
+    "        frame_count += 1\n",
+    "    \n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()\n",
+    "    \n",
+    "    df = pd.DataFrame(results, columns=[\"Frame\", \"Path\", \"EAR\", \"Drowsy\"])\n",
+    "    df.to_csv(\"results.csv\", index=False)\n",
+    "    print(\"Analiza zakończona. Wyniki zapisane do results.csv\")\n",
     "\n",
-    "        if open_counter >= OPEN_EYES_CONSEC_FRAMES and not mar_alert:\n",
-    "            drowsy_alert = False\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Wybór źródła wideo\")\n",
+    "root.geometry(\"300x150\")\n",
     "\n",
-    "    #Status senności + informacja\n",
-    "    cv.putText(frame, f\"Sleepy: {drowsy_alert}\", (10, 30),\n",
-    "    cv.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
-    "    cv.putText(frame, f\"EAR: {EAR}\", (10, 60),\n",
-    "    cv.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 2)\n",
-    "    cv.putText(frame, f\"MAR: {MAR}\", (10, 90),\n",
-    "    cv.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 2)\n",
-    "    cv.putText(frame, f\"Mrugniecie: {blink_counter}\", (10, 120),\n",
-    "    cv.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 2)\n",
-    "    cv.putText(frame, f\"Otwarte oczy: {open_counter}\", (10, 150),\n",
-    "    cv.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 2)\n",
+    "tk.Label(root, text=\"Wybierz źródło wideo:\").pack(pady=10)\n",
+    "source_var = tk.StringVar()\n",
+    "source_var.set(\"Kamera\")\n",
     "\n",
+    "dropdown = tk.OptionMenu(root, source_var, \"Kamera\", \"Wideo\")\n",
+    "dropdown.pack(pady=5)\n",
     "\n",
-    "    cv.imshow(\"Kamera\", frame)\n",
-    "    if cv.waitKey(1) & 0xFF == ord('q'):\n",
-    "        break\n",
-    "\n",
-    "cap.release()\n",
-    "cv.destroyAllWindows()\n"
+    "tk.Button(root, text=\"Start\", command=lambda: start_analysis(source_var.get())).pack(pady=10)\n",
+    "root.mainloop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "460a34f3-6550-411b-b646-2634fa71995e",
    "metadata": {
     "scrolled": true
@@ -125,6 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "warning: in the working copy of '.ipynb_checkpoints/zmeczenieprojekt-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'zmeczenieprojekt.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     }
@@ -144,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "opencv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
