--- a/zmeczenieprojekt.ipynb
+++ b/zmeczenieprojekt.ipynb
@@ -33,7 +33,7 @@
     "def eye_aspect_ratio(eye):\n",
     "    A = dist.euclidean(eye[1], eye[5])\n",
     "    B = dist.euclidean(eye[2], eye[4])\n",
-    "    C = dist.euclidean(eye[0], eye[3])\n",
+    "    C = dist.euclidean(eye[0], eSye[3])\n",
     "    return (A + B) / (2.0 * C)\n",
     "\n",
     "EYE_AR_THRESH = 0.25\n",
@@ -124,7 +124,7 @@
     "source_var.set(\"Kamera\")\n",
     "\n",
     "dropdown = tk.OptionMenu(root, source_var, \"Kamera\", \"Wideo\")\n",
-    "dropdown.pack(pady=5)\n",
+    "dropdown.pack(pady=5S\n",
     "\n",
     "tk.Button(root, text=\"Start\", command=lambda: start_analysis(source_var.get())).pack(pady=10)\n",
     "root.mainloop()"
@@ -132,29 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "460a34f3-6550-411b-b646-2634fa71995e",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of '.ipynb_checkpoints/zmeczenieprojekt-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'zmeczenieprojekt.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "id": "31c2e58c-1816-4295-83f1-38dffd80ba0b",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "!git add .\n"
+    "!git add ."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13f63afa-5076-48f6-9235-91cff0c3b733",
+   "id": "e6e0aaa2-431d-45cc-b5f7-903e90a9ba88",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -176,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
